--- a/Workspace/Prototype/pom.xml
+++ b/Workspace/Prototype/pom.xml
@@ -1,12 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>Prototype</groupId>
-	<artifactId>Prototype</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>master</groupId>
+	<artifactId>Prototipo-Controle</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>Archetype - Prototype</name>
+	<url>http://maven.apache.org</url>
 
-	<organization>
-		<name>Asofth</name>
-	</organization>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<compilerVersion>1.7</compilerVersion>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
