Including envionment.properties

--- a/Workspace/Prototype/src/main/resources/environment.properties
+++ b/Workspace/Prototype/src/main/resources/environment.properties
@@ -1,1 +1,2 @@
 #information about the computers that compose the environment
+agents.startup.classes=asofth.prototype.agent.EventProcessingAgent;asofth.prototype.agent.QueueStatisticsCollectorAgent
