--- a/Workspace/Prototype/.classpath
+++ b/Workspace/Prototype/.classpath
@@ -19,12 +19,16 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jade.jar" sourcepath="lib/JADE-src-4.3.2.zip"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+	<classpathentry kind="lib" path="lib/JADE-src-4.3.2.zip"/>
+	<classpathentry kind="lib" path="lib/activemq-broker-5.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-client-5.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-openwire-legacy-5.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/geronimo-j2ee-management_1.1_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/geronimo-jms_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/JADE-src-4.3.2.zip"/>
-	<classpathentry kind="lib" path="lib/jade4spring-1.1.1.jar" sourcepath="lib/jade4spring-1.1.1-src.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
