--- a/Workspace/Prototype/pom.xml
+++ b/Workspace/Prototype/pom.xml
@@ -2,12 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>master</groupId>
-	<artifactId>Prototipo-Controle</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>Archetype - Prototype</name>
 	<url>http://maven.apache.org</url>
 
-	<build>
+	<!-- build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -60,6 +59,10 @@
 			<artifactId>activemq-broker</artifactId>
 		</dependency>
 
-	</dependencies>
+	</dependencies-->
 
+	<artifactId>Prototype</artifactId>
+	<organization>
+		<name>Asofth</name>
+	</organization>
 </project>
