--- a/Workspace/Prototype/src/main/resources/environment_default.properties
+++ b/Workspace/Prototype/src/main/resources/environment_default.properties
@@ -1,5 +1,5 @@
 #information about the computers that compose the environment
-agents.startup.classes=asofth.prototype.agent.QueueStatisticsCollectorAgent;asofth.prototype.agent.EventProcessingAgent
+agents.startup.classes=asofth.prototype.agent.QueueStatisticsCollectorAgent;asofth.prototype.agent.EventProcessingAgent;asofth.prototype.agent.RandomMessagingAgent
 active.mq.host=service:jmx:rmi:///jndi/rmi://localhost:2011/jmxrmi
 active.mq.user=admin
 active.mq.password=activemq
