--- a/Workspace/Prototype/src/main/resources/environment_main.properties
+++ b/Workspace/Prototype/src/main/resources/environment_main.properties
@@ -1,2 +1,2 @@
 #information about the computers that compose the environment
-agents.startup.classes=asofth.prototype.agent.EventProcessingAgent
+agents.startup.classes=asofth.prototype.agent.EventProcessingAgent;asofth.prototype.agent.RandomMessagingAgent
