--- a/Workspace/Prototype/.classpath
+++ b/Workspace/Prototype/.classpath
@@ -30,5 +30,40 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/drools-core-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/drools-compiler-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/drools-decisiontables-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/drools-jsr94-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/drools-persistence-jpa-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/drools-templates-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-runtime-3.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/ecj-3.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/jade4spring-1.1.1-src.zip"/>
+	<classpathentry kind="lib" path="lib/jade4spring-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.15.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/jbpm-audit-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/jbpm-bpmn2-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/jbpm-flow-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/jbpm-flow-builder-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-1.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/jsr94-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/kie-api-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/kie-internal-6.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/mvel2-2.1.7.Final.jar"/>
+	<classpathentry kind="lib" path="lib/poi-3.9.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-3.9.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.9.jar"/>
+	<classpathentry kind="lib" path="lib/protobuf-java-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-1.3.04.jar"/>
+	<classpathentry kind="lib" path="lib/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="lib/xstream-1.4.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
