--- a/Workspace/Prototype/.classpath
+++ b/Workspace/Prototype/.classpath
@@ -19,17 +19,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jade.jar" sourcepath="lib/JADE-src-4.3.2.zip"/>
-	<classpathentry kind="lib" path="lib/JADE-src-4.3.2.zip"/>
 	<classpathentry kind="lib" path="lib/activemq-broker-5.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/activemq-client-5.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/activemq-openwire-legacy-5.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/geronimo-j2ee-management_1.1_spec-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/geronimo-jms_1.1_spec-1.1.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/drools-core-6.0.0.Final.jar" sourcepath="D:/dev/droolsjbpm-tools-distribution-6.0.0.Final/sources/org.jbpm.eclipse-6.0.0.Final-sources.jar"/>
 	<classpathentry kind="lib" path="lib/drools-compiler-6.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/drools-decisiontables-6.0.0.Final.jar"/>
@@ -65,5 +59,6 @@
 	<classpathentry kind="lib" path="lib/xmlpull-1.1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/xstream-1.4.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_09"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
