Implementaçao dos conectores

--- a/Workspace/ProvaDeConceito/resource/ambiente.properties
+++ b/Workspace/ProvaDeConceito/resource/ambiente.properties
@@ -1,3 +1,7 @@
 #variaveis do ambiente da aplicacao
-url.bkroker.jms=tcp://localhost:61616
-nome.fila=requisicoes
+jms.broker.url=tcp://localhost:61616
+jms.broker.jmx.host=service:jmx:rmi:///jndi/rmi://localhost:2011/jmxrmi
+jms.broker.user=admin
+jms.broker.password=activemq
+jms.broker.name=org.apache.activemq:type=Broker,brokerName=localhost
+jms.broker.queue.name=requisicoes
