--- a/Workspace/ProvaDeConceito/.classpath
+++ b/Workspace/ProvaDeConceito/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="lib/hawtbuf-1.11.jar"/>
 	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.10.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.10.jar"/>
+	<classpathentry kind="lib" path="lib/jade.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
