--- a/Workspace/ProvaDeConceito/resource/ambiente.properties
+++ b/Workspace/ProvaDeConceito/resource/ambiente.properties
@@ -1,7 +1,13 @@
-#variaveis do ambiente da aplicacao
-jms.broker.url=tcp://localhost:61616
-jms.broker.jmx.host=service:jmx:rmi:///jndi/rmi://localhost:2011/jmxrmi
-jms.broker.user=admin
-jms.broker.password=activemq
-jms.broker.name=org.apache.activemq:type=Broker,brokerName=localhost
-jms.broker.queue.name=requisicoes
+#elementos monitorados
+elemento.monitorado.FILA_MENSAGEM.jmx.host=service:jmx:rmi:///jndi/rmi://localhost:2011/jmxrmi
+elemento.monitorado.FILA_MENSAGEM.jmx.name=org.apache.activemq:type=Broker,brokerName=localhost
+elemento.monitorado.FILA_MENSAGEM.jms.broker.url=tcp://localhost:61616
+elemento.monitorado.FILA_MENSAGEM.jms.broker.user=admin
+elemento.monitorado.FILA_MENSAGEM.jms.broker.password=activemq
+elemento.monitorado.FILA_MENSAGEM.jms.broker.queue.name=requisicoes
+
+elemento.monitorado.EXECUTOR_INSTANCIA_1.jmx.host=service:jmx:rmi:///jndi/rmi://localhost:7771/jmxrmi
+
+elemento.monitorado.EXECUTOR_INSTANCIA_2.jmx.host=service:jmx:rmi:///jndi/rmi://localhost:7772/jmxrmi
+
+elemento.monitorado.EXECUTOR_INSTANCIA_3.jmx.host=service:jmx:rmi:///jndi/rmi://localhost:7773/jmxrmi
